# flotise

./: CMakeLists.txt  Makefile  README.md  main.cpp  run.sh  window_manager.cpp  window_manager.hpp  window_tree.cpp  window_tree.hpp  xinitrc
